# Astrobotics-AY26

./: README.md  workflow.txt
Notes/: Building_Steps.txt  Node_Templates.txt  Required_ROS2_PKGS.txt  Seeing_Controller.txt
astro_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
astro_ws/install/cpp_control_pkg/share/ament_index/resource_index/package_run_dependencies/: cpp_control_pkg
astro_ws/install/cpp_control_pkg/share/ament_index/resource_index/parent_prefix_path/: cpp_control_pkg
astro_ws/install/cpp_control_pkg/share/cpp_control_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
astro_ws/install/cpp_control_pkg/share/cpp_control_pkg/cmake/: cpp_control_pkgConfig.cmake
astro_ws/log/: latest_build
astro_ws/src/cpp_control_pkg/: CMakeLists.txt  package.xml
astro_ws/src/cpp_control_pkg/src/: localcontroller.cpp  server_publisher.cpp
deprecated_dir/: masternode.cpp
deprecated_dir/controller_pkg/: package.xml  setup.py
deprecated_dir/controller_pkg/controller_pkg/: controller_lib.py  controller_node.py
microcontroller_code/opencr_subscriber_code/: opencr_subscriber_code.ino
microcontroller_code/turtlebot_testbed/: turtlebot_testbed.ino
microcontroller_code/turtlebot_testbed/turtlebot_testbed/: turtlebot_testbed.ino
