<?xml version="1.0"?>
<package format="2">
  <name>cpp_control_pkg</name>
  <version>0.0.1</version>
  <description>The cpp_control_pkg package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rcutils</depend>
  <depend>nlohmann-json3-dev</depend>  <!-- OS package providing nlohmann_json -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>